<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/profile"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/event" />
        <item
            android:id="@+id/nav_post"
            android:icon="@drawable/post"
            android:title="@string/post" />
        <item
            android:id="@+id/nav_applyBenefit"
            android:icon="@drawable/apply"
            android:title="@string/apply_benefit" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/location" />
    </group>
</menu>