<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.ResetPasswordPage">

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="282dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="65dp"
        android:text="@string/confirmReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetConfirmPassword" />

    <EditText
        android:id="@+id/resetConfirmPassword"
        android:layout_width="355dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetNewPassword" />

    <EditText
        android:id="@+id/resetNewPassword"
        android:layout_width="355dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="28dp"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetByEmail" />

    <EditText
        android:id="@+id/resetByEmail"
        android:layout_width="355dp"
        android:layout_height="68dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="28dp"
        android:background="@color/grey"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailSubject"
        android:paddingStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ButtonBackReset"
        android:layout_width="48dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:background="@color/white"
        android:scrollbarSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="52dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="76dp"
        android:fontFamily="sans-serif-medium"
        android:text="Reset Password"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/ButtonBackReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>